corrected plots and added some comments

--- a/iq-modulation/iq-sampling.ipynb
+++ b/iq-modulation/iq-sampling.ipynb
@@ -1163,10 +1163,14 @@
     "fs = sps\n",
     "\n",
     "# Das ist nun der I Teil des empfangenen Signals\n",
-    "rx_sampled = I_hat_i_filtered[::fs].real\n",
+    "real_part = I_hat_i_filtered[::fs].real\n",
+    "\n",
+    "# Der Q-Anteil hat den Wert Null, da BPSK verwendet wurde\n",
+    "Q_hat_q_filtered = np.zeros_like(I_hat_i_filtered.size, dtype=np.complex64)\n",
+    "imag_part = Q_hat_q_filtered[::fs].imag\n",
     "\n",
     "# Das SDR liefert nun daraus ein NumpPy Array mit dem dtype complex64\n",
-    "rx_sampled = rx_sampled.astype(np.complex64)\n"
+    "sdr_iq_samples = (real_part + 1j * imag_part).astype(np.complex64)\n"
    ],
    "id": "c12d9d5fbd301903",
    "outputs": [],
@@ -1175,7 +1179,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "print(rx_sampled)",
+   "source": "print(sdr_iq_samples)",
    "id": "10e9b0f4b3134206",
    "outputs": [],
    "execution_count": null
@@ -1189,7 +1193,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "rx_sampled\n",
+   "source": "sdr_iq_samples\n",
    "id": "12d6d12f9533f418",
    "outputs": [],
    "execution_count": null
@@ -1197,7 +1201,7 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "plt.plot(rx_sampled, '.')",
+   "source": "plt.plot(sdr_iq_samples, '.')",
    "id": "8ca8224b31c40e28",
    "outputs": [],
    "execution_count": null
