corrected plots and added some comments

--- a/iq-modulation/iq-sampling.ipynb
+++ b/iq-modulation/iq-sampling.ipynb
@@ -1146,12 +1146,14 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## 3. ADC von $\\hat{I}_{\\tiny{\\text{Filtered}}}(t)$\n",
+    "## 3. ADC von $\\hat{I}_{\\tiny{\\text{Filtered}}}(t)$ & $\\hat{Q}_{\\tiny{\\text{Filtered}}}(t)$\n",
     "\n",
     "#### Aufgabe:\n",
     "- Führen sie das Sampling für $\\hat{I}_{\\tiny{\\text{Filtered}}}(t)$, welches in `I_hat_i_filtered` gespeichert ist aus (Hinweis: $f_s = \\text{sps}$)\n",
-    "- Speichern Sie den Realteil der Samples in `rx_sampled`\n",
-    "- Konvertieren Sie `rx_sampled` in ein NumPy Array `sdr_iq_samples` vom Typ `np.complex64`\n",
+    "- Aufgrund des Filterns wurde $\\hat{I}_{\\tiny{\\text{Filtered}}}(t)$ komplex\n",
+    "- Speichern Sie den Realteil der Samples in `real_part`\n",
+    "- $\\hat{Q}_{\\tiny{\\text{Filtered}}}(t) = 0$, da BPSK verwendet wurde. Der Vollständigkeit halber wird es hier dennoch berücksichtigt.\n",
+    "- Führen Sie `real_part` und `imag_part` in ein NumPy Array `sdr_iq_samples` vom Typ `np.complex64` zusammen\n",
     "- Dies ist das Ergebnis, welches Ihnen die uhd Bibliothek nach einer Messung bereitstellt"
    ],
    "id": "89caaa5fb202c659"
@@ -1167,7 +1169,7 @@
     "\n",
     "# Der Q-Anteil hat den Wert Null, da BPSK verwendet wurde\n",
     "Q_hat_q_filtered = np.zeros_like(I_hat_i_filtered.size, dtype=np.complex64)\n",
-    "imag_part = Q_hat_q_filtered[::fs].imag\n",
+    "imag_part = Q_hat_q_filtered[::fs].real\n",
     "\n",
     "# Das SDR liefert nun daraus ein NumpPy Array mit dem dtype complex64\n",
     "sdr_iq_samples = (real_part + 1j * imag_part).astype(np.complex64)\n"
