corrected plots and added some comments

--- a/iq-modulation/iq-sampling.ipynb
+++ b/iq-modulation/iq-sampling.ipynb
@@ -1153,7 +1153,7 @@
     "- Aufgrund des Filterns wurde $\\hat{I}_{\\tiny{\\text{Filtered}}}(t)$ komplex\n",
     "- Speichern Sie den Realteil der Samples in `real_part`\n",
     "- $\\hat{Q}_{\\tiny{\\text{Filtered}}}(t) = 0$, da BPSK verwendet wurde. Der Vollständigkeit halber wird es hier dennoch berücksichtigt.\n",
-    "- Führen Sie `real_part` und `imag_part` in ein NumPy Array `sdr_iq_samples` vom Typ `np.complex64` zusammen\n",
+    "- Führen Sie `real_part` und `imag_part` in ein NumPy Array `sdr_iq_samples` vom Typ `np.complex64` zusammen, wobei: `sdr_iq_samples`$[i] =$ `real_part`$[i]$ + $j$ ` imag_part`$[i]$\n",
     "- Dies ist das Ergebnis, welches Ihnen die uhd Bibliothek nach einer Messung bereitstellt"
    ],
    "id": "89caaa5fb202c659"
