--- a/02_sigmf/sigmf.ipynb
+++ b/02_sigmf/sigmf.ipynb
@@ -28,8 +28,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-23T22:28:41.087188Z",
-     "start_time": "2025-02-23T22:28:41.076107Z"
+     "end_time": "2025-02-24T11:14:09.763856Z",
+     "start_time": "2025-02-24T11:14:09.743126Z"
     }
    },
    "cell_type": "code",
@@ -132,17 +132,31 @@
     "    :param params: Dictionary containing 'pilot_sym', 'pilot_start_idx', and 'pilot_repetition'\n",
     "    :return: Array of modulation data symbols with pilots\n",
     "    \"\"\"\n",
-    "    modulation_data_symbols_with_pilots = []\n",
-    "    pilot_symbol = params['pilot_sym']\n",
-    "    pilot_start_idx = params['pilot_start_idx']\n",
-    "    pilot_repetition = params['pilot_repetition']\n",
     "\n",
-    "    for i in range(len(modulation_data_symbols)):\n",
-    "        if (i - pilot_start_idx) % pilot_repetition == 0:\n",
-    "            modulation_data_symbols_with_pilots.append(pilot_symbol)\n",
-    "        modulation_data_symbols_with_pilots.append(modulation_data_symbols[i])\n",
+    "    total_symbols = params['frame']['data_syms']\n",
+    "    pilot_symbol = params['frame']['pilot_sym']\n",
+    "    pilot_start_idx = params['frame']['pilot_start_idx']\n",
+    "    pilot_repetition = params['frame']['pilot_repetition']\n",
     "\n",
-    "    return np.array(modulation_data_symbols_with_pilots)\n",
+    "    # Berechnung der Anzahl der Piloten\n",
+    "\n",
+    "    modulation_data_symbols_with_pilots = np.zeros(params['frame']['data_syms'], dtype=np.complex64)\n",
+    "\n",
+    "\n",
+    "    pilot_idx = np.arange(pilot_start_idx, total_symbols, pilot_repetition + 1)\n",
+    "    num_pilots = pilot_idx.size\n",
+    "\n",
+    "    data_sym_idx = 0\n",
+    "\n",
+    "    for i in range(len(modulation_data_symbols_with_pilots)):\n",
+    "        if np.isin(i, pilot_idx):\n",
+    "            modulation_data_symbols_with_pilots[i] = pilot_symbol\n",
+    "        elif data_sym_idx < modulation_data_symbols.size:\n",
+    "            modulation_data_symbols_with_pilots[i] = modulation_data_symbols[data_sym_idx]\n",
+    "            data_sym_idx += 1\n",
+    "        else:\n",
+    "            modulation_data_symbols_with_pilots[i] = 0\n",
+    "    return modulation_data_symbols_with_pilots\n",
     "\n",
     "def get_raised_cosine_pulse(num_taps=101, roll_off=0.35, samples_per_symbol=8):\n",
     "    Ts = samples_per_symbol\n",
@@ -270,7 +284,7 @@
    ],
    "id": "643ea80f6da07bfc",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -297,10 +311,13 @@
     "    # pulseform gibt die Basisbandpulse-Form an, welche Sie verwenden möchten\n",
     "    \"pulseform\": BasebandPulseForm.RAISED_COSINE,  # Verwendung des oben definierten Enums BasebandPulseForm\n",
     "    \"roll_off\": 0.35,  # der Roll-Off Faktor falls BasebandPulseForm.RAISED_COSINE verwendet werden soll, anderenfalls bleibt der Parameter ungenutzt\n",
-    "    \"pilot_sym\": np.sqrt(1+1j), #1, #\n",
-    "    \"pilot_start_idx\": 2,\n",
-    "    \"pilot_repetition\": 5, # after every fifth sym\n",
-    "    \"fc\": 2, # center freq in Hz\n",
+    "    \"frame\": {\n",
+    "        \"sync_syms\": 16,\n",
+    "        \"data_syms\": 64,\n",
+    "        \"pilot_sym\": np.sqrt(1+1j), #1, #\n",
+    "        \"pilot_start_idx\": 2,\n",
+    "        \"pilot_repetition\": 5, # after every fifth sym\n",
+    "    }\n",
     "}\n",
     "\n",
     "# Nun noch die Dauer eines Samples\n",
@@ -325,7 +342,7 @@
    },
    "cell_type": "code",
    "source": [
-    "information_str = \"MASO\"\n",
+    "information_str = \"HTWK\"\n",
     "information_bits = encode_string(information_str)\n",
     "print(information_bits)\n",
     "print(len(information_bits[0]))"
@@ -450,7 +467,7 @@
     }
    },
    "cell_type": "code",
-   "source": "synchronization_sequence = zadoff_chu_sequence(16, root=25)",
+   "source": "synchronization_sequence = zadoff_chu_sequence(params['frame']['sync_syms'], root=25)",
    "id": "6e5da4801703976b",
    "outputs": [],
    "execution_count": 9
