--- a/01_iq_modulation/iq-sampling.ipynb
+++ b/01_iq_modulation/iq-sampling.ipynb
@@ -531,29 +531,14 @@
    "id": "4bebf34b08269580",
    "metadata": {},
    "source": [
-    "### Design Basisbandpulse $h_{\\text{Pulse Form}}[n]$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e051e20cad51d11b",
-   "metadata": {},
-   "source": [
-    "#### Aufgabe: Zeitsignal des Basisband Pulses\n",
-    "- Erstellen Sie einen Basisband Puls $h_{\\text{Pulse Form}}[n]$\n",
-    "- Verwenden Sie dazu eine der oben bereits definierten Funktionen:\n",
-    "    - `get_rect_pulse`\n",
-    "    - `get_raised_cosine_pulse`\n",
-    "- Empfehlung: Beginnen Sie mit einem  $h_{\\text{Pulse Form}}[n] = \\text{rect}[n]$, so können Sie später die Unterschiede bei Verwendung eines *Raised Cosine Pulses* besser erkennen.\n",
+    "## Pulse Shaping:\n",
     "\n",
-    "#### Aufgabe: Spektrum des Basisbandimpulses $\\mathfrak{F} \\{ h_{\\text{Pulse Form}}[n] \\}$\n",
-    "- Hinweis: Den Frequenzvektor $f$ erhalten Sie durch die Funktion `np.fft.fftfreq(signal.length, time_between_samples)`\n",
-    "- NumPy bringt die Nullfrequenz an den Anfang, daher sollten Sie die Funktion `np.fft.fftshift` verwenden, um die Nullfrequenz in die Mitte zu schieben\n",
-    "- Denken Sie daran, das gleiche auch für den Frequenzvektor $f$ zu tun\n",
+    "Hierfür werden zwei Dinge benötigt:\n",
     "\n",
-    "##### Anweisungen\n",
-    "- Berechnen Sie $\\mathfrak{F} \\{ h_{\\text{Pulse Form}}[n] \\}$ für `baseband_spectrum`\n",
-    "- Erstellen Sie in passender Auflösung dazu den Frequenzvektor `f`"
+    "1. Design Basisbandimpulse $h_{\\text{Pulse Form}}[n]$\n",
+    "2. Dirac-Summe mit Modulationssymbolen $x_{\\text{no shape}}[n]$\n",
+    "\n",
+    "Die Basisbandimpulse sind bereits implementiert, um ihnen die Arbeit zu erleichtern. Sie können diese einfach verwenden. Nachfolgende Codezelle plottet den von ihnen in den `params.baseband` konfigurierten Basisbandimpuls."
    ]
   },
   {
@@ -592,9 +577,13 @@
    "id": "4b347b9b979272cf",
    "metadata": {},
    "source": [
-    "### Bilden Sie die Dirac-Summe der Modulationssymbole $x_{\\text{no shape}}[n] = \\sum_{l=0}^{L-1} d(l) \\text{ } \\delta\\left(t - l T_s\\right) $\n",
+    "### 2. Dirac-Summe der Modulationssymbole `symbols` $x_{\\text{no shape}}[n] = \\sum_{l=0}^{L-1} d(l) \\text{ } \\delta\\left(t - l T_s\\right) $\n",
     "\n",
     "- Ziel: NumPy Array mit der Dirac-Summe $x_{\\text{no shape}}[n]$.\n",
+    "- Die Modulationssymbole des gesamten Frames liegen zwei Codezellen oberhalb in `symbols`\n",
+    "\n",
+    "Es wird benötigt:\n",
+    "\n",
     "1. Eine Dirac-Summe $x_{\\text{I,no shape}}[n]$ für den I-Anteil, welche die Realteile der Symbole $ \\Re \\{d(l) \\} $ enthält\n",
     "2. Eine Dirac-Summe $x_{\\text{I,no shape}}[n]$ für den Q-Anteil, welche die Imaginärteile der Symbole $ \\Im \\{d(l) \\} $ enthält\n",
     "- Hinweis: Die Zeit $t$ ist diskret, wobei ein Indexbin $n$ einem Zeitpunkt $t = n \\cdot T_{\\text{Sample}}$ entspricht\n",
@@ -613,11 +602,11 @@
     "    x_{\\text{Q, no shape}}[n] = \\sum_{i=0}^{N-1} \\Im \\{d(l) \\}  \\text{ } \\delta\\left(n - l \\text{ sps}\\right) \\quad \\text{, mit } N = \\text{len(d(l) )}\\cdot sps\n",
     "$$\n",
     "\n",
-    "#### Aufgabe 7:\n",
-    "- Erstellen Sie die Dirac-Summe $x_{\\text{I, no shape}}[n]$ in `x_i_no_shape`\n",
-    "- Erstellen Sie die Dirac-Summe $x_{\\text{Q, no shape}}[n]$ in `x_q_no_shape`\n",
-    "- Erstellen Sie zusätzlich die Zeitvariable `t`\n",
-    "- Hinweis: Der `dirac_impulse()` der obigen Funktion kann für $\\delta (t)$ verwendet werden\n"
+    "#### Aufgabe 7: Implementierung von IQSender.dirac_sum_with_frame_symbols().\n",
+    "- Erstellen Sie die Dirac-Summe $x_{\\text{I, no shape}}[n]$ in `x_no_shaped`\n",
+    "- Erstellen Sie die Dirac-Summe $x_{\\text{Q, no shape}}[n]$ in `x_no_shaped`\n",
+    "- Erstellen Sie zusätzlich die Zeitvariable `t`, beachten Sie dass zwischen jedem Sample in `t` der Abstand `T_Sample` sein muss. (Im IQSender liegt die Information in `self.baseband_params.T_sample`)\n",
+    "- Hinweis: Sie können für $\\delta (t - \\tau)$ `Signals.delta_distribution(t, tau)` verwenden\n"
    ]
   },
   {
@@ -643,9 +632,7 @@
     "x_iq_no_shape = iq_sender.dirac_sum_with_frame_symbols()\n",
     "\n",
     "x_i_no_shape = x_iq_no_shape.I\n",
-    "x_q_no_shape = x_iq_no_shape.Q\n",
-    "\n",
-    "t = np.arange(len(x_i_no_shape)) * params.baseband.T_sample"
+    "x_q_no_shape = x_iq_no_shape.Q"
    ]
   },
   {
@@ -697,17 +684,19 @@
    "id": "d1d774fc97939298",
    "metadata": {},
    "source": [
-    "#### Aufgabe:\n",
+    "#### Aufgabe 8: Pulse Shaping\n",
     "\n",
-    "- Berechnung von $x_{\\text{I, shaped}}[n]$ in `x_i_shaped`\n",
-    "- Berechnung von $x_{\\text{Q, shaped}}[n]$ in `x_q_shaped`\n",
+    "##### Aufgabe 8.1: Implementierung von IQSender.shape_symbols()\n",
+    "- $ h_{\\tiny{\\text{Pulse Form}}}[n] $ erhalten Sie innerhalb von shape_symbols() im IQSender via `self.h.generate_pulse()`\n",
+    "- Berechnung von $x_{\\text{I, shaped}}[n]$ in `x_iq_shaped.I` (mithilfe von `self.x_iq_no_shape.I` und `h`)\n",
+    "- Berechnung von $x_{\\text{Q, shaped}}[n]$ in `x_iq_shaped.Q` (mithilfe von `self.x_iq_no_shape.I` und `h`)\n",
+    "##### Aufgabe 8.2: In nachfolgender Jupyter Zelle erweitern\n",
     "- Erstellen Sie ein passenden Zeitvektor `t`\n",
     "- Berechnen Sie $\\mathfrak{F} \\{x_{\\text{I, shaped}}[n] \\}$ und speichern Sie das Ergebnis in `x_i_shaped_spectrum`\n",
     "- Berechnen Sie $\\mathfrak{F} \\{x_{\\text{Q, shaped}}[n] \\}$ und speichern Sie das Ergebnis in `x_q_shaped_spectrum`\n",
     "- Erstellen Sie in der korrekten Auflösung den zugehörigen Frequenzvektor `f`\n",
     "- Hinweise:\n",
-    "    - Nutzen Sie die Funktion `np.convolve` für die Faltung\n",
-    "    - Der Basisbandpuls $h_{\\tiny{\\text{Pulse Form}}}[n]$ ist bereits gegeben: `h_pulse_form`"
+    "    - Nutzen Sie die Funktion `np.convolve` für die Faltung"
    ]
   },
   {
@@ -734,6 +723,9 @@
     "\n",
     "x_i_shaped = x_iq_shaped.I\n",
     "x_q_shaped = x_iq_shaped.Q\n",
+    "\n",
+    "\n",
+    "# TODO: Zuweisungen für aufgabe 8 entfernen nachfolgend\n",
     "t = np.arange(x_i_shaped.size) * params.baseband.T_sample\n",
     "\n",
     "x_i_shaped_spectrum = np.fft.fftshift(np.fft.fft(x_i_shaped))\n",
@@ -763,11 +755,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "plot_shaped_signals(h_pulse_form, x_i_no_shape, x_i_shaped, x_i_shaped_spectrum, x_q_no_shape, x_q_shaped, x_q_shaped_spectrum, t, f)\n",
-    "\n",
-    "# TODO: Funktion basteln welche hier eine zeile anzeigen kann"
-   ]
+   "source": "plot_shaped_signals(h_pulse_form, x_i_no_shape, x_i_shaped, x_i_shaped_spectrum, x_q_no_shape, x_q_shaped, x_q_shaped_spectrum, t, f)"
   },
   {
    "cell_type": "markdown",
@@ -793,6 +781,12 @@
     "- Generieren Sie zu $f_c = 2$ die Träger $s_{\\text{c,I}}(t)$ in `s_c_I` und $s_{\\text{c,Q}}(t)$ in `s_c_Q`\n",
     "- Erstellen Sie einen passenden Zeitvektor `t`"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Hier mit Aufgaben weitermachen!!! Oversampling Faktor mit reinbringen! In die Aufgabe",
+   "id": "1d93a9ec012d030c"
   },
   {
    "cell_type": "code",
