--- a/01_iq_modulation/iq-sampling.ipynb
+++ b/01_iq_modulation/iq-sampling.ipynb
@@ -114,28 +114,7 @@
    "source": [
     "## Generierung des Sendesignals\n",
     "\n",
-    "Das Sendesignal wird aus den Datenbits und einer Synchronisationssequenz generiert. Die Synchronisationssequenz wird verwendet, um den Empfänger zu synchronisieren. Das Sendesignal wird dann mit einem Raised-Cosine Filter gepulst, um die Bandbreite des Signals zu begrenzen.\n",
-    "\n",
-    "### Konvertierung der Datenbits $\\vec{b}[m]$ in BPSK Samples\n",
-    "\n",
-    "   $$\n",
-    "    \\text{BPSK}(i) = \\vec{b}[i] \\cdot 2 - 1\n",
-    "   $$\n",
-    "\n",
-    "Es sollen T = 8 Samples pro Symbol verwendet werden. Das Sendesignal wird dann wie folgt generiert:\n",
-    "\n",
-    "$$\n",
-    "    x_{\\text{NF, no shape}}[n] = \\sum_{i=0}^{N-1} \\text{BPSK}(i) \\delta\\left(n - i T\\right)\n",
-    "$$\n",
-    "\n",
-    "Für IQ-Modulation wird das für den I und Q Teil getrennt durchgeführt, somit ergibt sich:\n",
-    "\n",
-    "$$\n",
-    "    x_{\\text{I, no shape}}[n] = \\Re\\left\\{x_{\\text{NF, no shape}}[n]\\right\\}\n",
-    "$$\n",
-    "$$\n",
-    "    x_{\\text{Q, no shape}}[n] = \\Im\\left\\{x_{\\text{NF, no shape}}[n]\\right\\}\n",
-    "$$"
+    "Das Sendesignal wird aus den Datenbits und einer Synchronisationssequenz generiert. Die Synchronisationssequenz wird verwendet, um den Empfänger zu synchronisieren. Das Sendesignal wird dann mit einem Basisbandimpuls geshaped."
    ]
   },
   {
