--- a/01_iq_modulation/iq-sampling.ipynb
+++ b/01_iq_modulation/iq-sampling.ipynb
@@ -38,9 +38,9 @@
     "\n",
     "# IQ Sampling\n",
     "\n",
-    "Ziel dieses Notebooks ist es, ein Verständnis für die generierung und Abtastung von IQ-Samples zu entwickeln. Dabei soll Rauschen und der Einfluss des Kanals zunächst vernachlässigt werden. Der Fokus soll hier allein auf dem Verständnis liegen, wie IQ Samples von einem SDR versendet werden, als reales Signal übertragen werden und wie sie empfangen werden.\n",
+    "Ziel dieses Notebooks ist es, ein Verständnis für die Generierung und Abtastung von IQ-Samples zu entwickeln. Der Fokus soll hier allein auf dem Verständnis liegen, wie IQ Samples von einem SDR versendet werden, als reales Signal übertragen werden und wie sie empfangen werden.\n",
     "\n",
-    "Am Ende des Notebooks sollte folgendes klar sein:\n",
+    "Durch die Bearbeitung dieses Notebooks sollen nachfolgende Fragen beantwortet werden:\n",
     "\n",
     "- Was sind IQ-Samples?\n",
     "- Das Sendesignal wird immer komplex beschrieben. Übertragen wird jedoch nur der Realteil. Warum?\n",
